2002-10-28  Richard Williamson   <rjw@apple.com>
    
        Fixed 3086188 - REGRESSION: Justified text is broken
        
        Bogus special case for DirW(hite)S(pace).  This
        should be correctly detected by CF, but is not.
        Revert to explicit checking for ' ' character.  This'll
        work most of the time.  All the more reason to do
        our own unicode attribute database.
        
        * kwq/KWQChar.mm:
        (QChar::direction):

2002-10-28  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3056726 - View Source window always displays the source in current system encoding
	Fixed: 3019352 - Text encoding is not handled when viewing plain text

        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (+[WebCoreBridge stringWithData:textEncoding:]): added, creates a string with data using the WebCore's decoding logic.
        (+[WebCoreBridge stringWithData:textEncodingName:]): added, calls stringWithData:textEncoding: after getting the encoding for a text encoding name

2002-10-28  Don Melton  <gramps@apple.com>

        * khtml/html/htmlparser.cpp:
        (KHTMLParser::insertNode):
        * khtml/html/htmltokenizer.cpp:
        (HTMLTokenizer::write):

	Backed our Dave's whitespace hack because it was adding newlines, i.e.
	vertical margins, to web pages all over.

2002-10-28  Darin Adler  <darin@apple.com>

	- fixed 3015800 -- bad URL error - unescaped # in URL

	Actually this has to be fixed both here and in NSURLExtras.

        * kwq/KWQKURL.mm: Set the "BadChar" flag for "#" so we escape any
	"#" characters we see after the first one.

2002-10-27  Darin Adler  <darin@apple.com>

	- fixed 3058845 -- <input type=file> uses hard-coded width of 200
	pixels for filename

        * khtml/rendering/render_form.cpp:
        (RenderLineEdit::calcMinMaxWidth): Use a default of 20 "x-widths" wide, to
	match Mozilla, rather than the 17 that is in KHTML by default.