@@ -1,3 +1,10 @@
+2002-10-28  Chris Blumenberg  <cblu@apple.com>
+
+	Lowercase the text encoding name.
+
+        * kwq/KWQCharsets.mm:
+        (KWQCFStringEncodingFromIANACharsetName):
+
 2002-10-28  Richard Williamson   <rjw@apple.com>
     
         Fixed 3086188 - REGRESSION: Justified text is broken
